# sluyspy

./: .readthedocs.yaml  README.md  pyproject.toml  requirements.txt  setup.py
docs/: conf.py  index.rst  requirements.txt  sluyspy.air_visual.rst  sluyspy.cli.rst  sluyspy.earth.rst  sluyspy.env.rst  sluyspy.ephem.rst  sluyspy.fit.rst  sluyspy.gws.rst  sluyspy.html.rst  sluyspy.ml.rst  sluyspy.numerics.rst  sluyspy.pandas.rst  sluyspy.plot.rst  sluyspy.rst  sluyspy.solar_energy.rst  sluyspy.solar_panels.rst  sluyspy.system.rst  sluyspy.text.rst  sluyspy.weather.rst  sluyspy.wp_data.rst
examples/: fit-example.py
sluyspy/: __init__.py  cli.py  earth.py  env.py  ephem.py  fit.py  gws.py  html.py  ml.py  numerics.py  pandas.py  plot.py  solar_energy.py  solar_panels.py  sys.py  system.py  text.py  to_precision.py  weather.py  wp_data.py
