[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sluyspy"
version = "0.0.42"
authors = [ { name="Marc van der Sluys", email="git@vandersluys.nl" } ]
description = "Marc van der Sluys' personal Python modules."
readme   = "README.md"
license  = "EUPL-1.2"
keywords = ["personal", "private"]
dependencies = ["astrotool","matplotlib","numpy","pandas","pytz","scipy","solarenergy","termcolor"]

# See: https://pypi.org/pypi?:action=list_classifiers
classifiers = [
        "Development Status :: 3 - Alpha",
        "Intended Audience :: Developers",
        "Intended Audience :: Education",
        "Intended Audience :: Science/Research",
        "Natural Language :: English",
        "Operating System :: OS Independent",
        "Programming Language :: Python :: 3",
        "Topic :: Scientific/Engineering",
        "Topic :: Scientific/Engineering :: Astronomy",
        "Topic :: Scientific/Engineering :: Physics",
    ]

[project.urls]
GitHub = "https://github.com/MarcvdSluys/sluyspy"
ReadTheDocs = "https://sluyspy.readthedocs.io"
